# fast_api_sample

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
app/: main.py
app/api/v1/: auth.py  devices.py  router.py  users.py
app/core/: config.py  database.py  logging.py  redis.py  security.py
app/dependencies/: auth.py  redis.py
app/exceptions/: auth.py  base.py  handlers.py  user.py
app/middleware/: logging.py  request_id.py
app/models/: __init__.py  base.py  login_history.py  user.py  user_device.py
app/repositories/: login_history.py  user.py  user_device.py
app/schemas/: auth.py  common.py  device.py  user.py  validators.py
app/services/: auth.py  auth_event_logger.py  device.py  jwt.py  token_store.py  user.py
scripts/: generate_keys.py
tests/: conftest.py
tests/integration/: test_auth_api.py  test_user_api.py
tests/unit/: test_jwt_service.py  test_password.py
